Update Exercise 3 Function with default args.ipynb

--- a/Exercise 3 Function with default args.ipynb
+++ b/Exercise 3 Function with default args.ipynb
@@ -119,7 +119,7 @@
     "        print(name,\"Your limit is exceeded\")\n",
     "    else:\n",
     "        print(name,\"Your limit is not exceeded\")\n",
-    "datausage(\"Asifa\",2.5,3)"
+    "datausage(\"ilamathi\",2.5,3)"
    ]
   }
  ],
